[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "exxa"
version = "0.4.9"
description = "Exa - Pytorch"
license = "MIT"
authors = ["Kye Gomez <kye@apac.ai>"]
homepage = "https://github.com/kyegomez/Exa"
documentation = ""  # Add this if you have documentation.
readme = "README.md"  # Assuming you have a README.md
repository = "https://github.com/kyegomez/Exa"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6"
]
packages = [
    { include = "exa" },
    { include = "exa/**/*.py" },
]


[tool.poetry.dependencies]
python = "^3.6"
transformers = "*"
bitsandbytes = "*"
optimum = "*" 
accelerate = "*"
termcolor = "*"
auto-gptq = "*"
diffusers = "*"
einops = "*"
colored = "*"
slowapi = "*"
fastapi = "*"
loguru = "*"
pydantic = "*"
uvicorn = "*"
fastapi-pagination = "*"


[tool.poetry.dev-dependencies]
# Add development dependencies here
